--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
-    "wrangler": "^0.0.0-beta.6"
+    "wrangler": "^0.0.10"
   }
 }
